--- a/pages/19971.html
+++ b/pages/19971.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9337/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9337/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,13 +317,14 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#program_transformation'>Program transformation</a></li>
 <li><a href='#connection_to_adjoint_functor_theorems'>Connection to adjoint functor theorems</a></li>
+<li><a href='#example'>Example</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
-<p><em>Defunctionalization</em> is a method of converting a functional program into one that involves no higher order functions nor lambda expressions. It is a whole program transformation.</p>
+<p><em>Defunctionalization</em> is a method of converting a <a class="existingWikiWord" href="/nlab/show/functional+programming">functional program</a> into one that involves no higher order functions nor lambda expressions. It is a whole program transformation.</p>
 
 <h2 id="program_transformation">Program transformation</h2>
 
@@ -359,7 +360,7 @@ margin-left: 0em;
 
 <h2 id="connection_to_adjoint_functor_theorems">Connection to adjoint functor theorems</h2>
 
-<p>Recall that a cartesian <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mi>A</mi></msup></mrow><annotation encoding="application/x-tex">B^A</annotation></semantics></math>, if it exists, is a representation of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Hom</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>×</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Hom(-\times A,B)</annotation></semantics></math>. As such, in many concrete situations, we can deduce its existence from an adjoint functor theorem. Recall that the <a class="existingWikiWord" href="/nlab/show/solution+set+condition">solution set condition</a> in this instance requires a set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math> and an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math>-indexed family of objects <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">C_i</annotation></semantics></math> together with morphisms</p>
+<p>Recall that a cartesian <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mi>A</mi></msup></mrow><annotation encoding="application/x-tex">B^A</annotation></semantics></math>, if it exists, is a <a class="existingWikiWord" href="/nlab/show/representable+functor">representation</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Hom</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>×</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Hom(-\times A,B)</annotation></semantics></math>. As such, in many concrete situations, we can deduce its existence from an <a class="existingWikiWord" href="/nlab/show/adjoint+functor+theorem">adjoint functor theorem</a>. Recall that the <a class="existingWikiWord" href="/nlab/show/solution+set+condition">solution set condition</a> in this instance requires a set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math> and an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math>-indexed family of objects <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">C_i</annotation></semantics></math> together with morphisms</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>f</mi> <mi>i</mi></msub><mo>:</mo><msub><mi>C</mi> <mi>i</mi></msub><mo>×</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">
  f_i:C_i\times A\to B
 
@@ -374,14 +375,45 @@ margin-left: 0em;
  \coprod_{i\in I}C_i
 
 </annotation></semantics></math></div>
-<p>is a weak internal hom, from which the internal hom is recovered by taking a <a class="existingWikiWord" href="/nlab/show/coequalizer">coequalizer</a>. This coproduct is reminiscent of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Defun</mi><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Defun(A,B)</annotation></semantics></math>.</p>
+<p>is a weak internal hom, from which the internal hom is recovered by taking a <a class="existingWikiWord" href="/nlab/show/coequalizer">coequalizer</a>. This coproduct is strongly reminiscent of the coproduct type <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Defun</mi><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Defun(A,B)</annotation></semantics></math> used in defunctionalization.</p>
+
+<h2 id="example">Example</h2>
+
+<p>Consider the <a class="existingWikiWord" href="/nlab/show/factorial">factorial</a> function in <a class="existingWikiWord" href="/nlab/show/continuation-passing+style">continuation-passing style</a>, written in <a class="existingWikiWord" href="/nlab/show/Haskell">Haskell</a>:</p>
+
+<pre><code>factcps :: Integer -&gt; (Integer -&gt; Integer) -&gt; Integer
+factcps x k = if x == 0 then k 1 else factcps (x-1) (\y -&gt; k (x * y))
+
+fact :: int -&gt; int
+fact x = factcps x (\x -&gt; x)</code></pre>
+
+<p>The idea is that <code>factcps x k</code> calculates the factorial of <code>x</code> but does not return the result, instead, it calls the “continuation” <code>k</code> with the result. Since <code>fact 5</code> calls <code>factcps 5</code> with the identity function, it will eventually return <code>120</code>.</p>
+
+<p>If this is the whole program, then there are only two <a class="existingWikiWord" href="/nlab/show/lambda+abstractions">lambda abstractions</a> we need to deal with, both of type <code>Integer -&gt; Integer</code>. The first one <code>\y -&gt; k (x * y)</code> has free variables <code>x</code> and <code>k</code>; we’ll call it <code>Multiply</code>. The second <code>\x -&gt; x</code> has no free variables; we’ll call it <code>Identity</code>.</p>
+
+<p>To defunctionalize this we define consider a type <code>DefunIntInt</code>, which is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Defun</mi><mo stretchy="false">(</mo><mi>Integer</mi><mo>,</mo><mi>Integer</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Defun(Integer,Integer)</annotation></semantics></math> above:</p>
+
+<pre><code>data DefunIntInt = Multiply Integer DefunIntInt | Identity
+eval :: DefunIntInt -&gt; Integer -&gt; Integer 
+eval (Multiply x k) y = eval k (x * y)
+eval (Identity) x = x</code></pre>
+
+<p>And now we can write the program without <a class="existingWikiWord" href="/nlab/show/lambda+abstractions">lambda abstractions</a>:</p>
+
+<pre><code>factcps :: Integer -&gt; DefunIntInt -&gt; Integer
+factcps x k = if x == 0 then eval k 1 else factcps (x-1) (Multiply x k)
+
+fact :: Integer -&gt; Integer
+fact x = factcps x Identity</code></pre>
+
+<p>In fact, in this example, the type <code>DefunIntInt</code> is isomorphic to the type of integer lists, and squinting slightly it can be seen as a call stack.</p>
 
 <h2 id="references">References</h2>
 
 <p>Defunctionalization was probably introduced by John Reynolds in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/John+C.+Reynolds">John C. Reynolds</a>, Definitional Interpreters for Higher-Order Programming Languages <a href="https://homepages.inf.ed.ac.uk/wadler/papers/papers-we-love/reynolds-definitional-interpreters-1998.pdf">pdf</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/John+C.+Reynolds">John C. Reynolds</a>, Definitional Interpreters for Higher-Order Programming Languages. In Proceedings of the Annual ACM Conference. 1972. <a href="https://homepages.inf.ed.ac.uk/wadler/papers/papers-we-love/reynolds-definitional-interpreters-1998.pdf">pdf</a></li>
 </ul>
 
 <p>There and elsewhere a common theme is to first convert programs to <a class="existingWikiWord" href="/nlab/show/continuation-passing+style">continuation-passing style</a>, which makes the control stack explicit, and then to defunctionalize, which makes the control stack look like a stack; the net result is a kind-of abstract machine.</p>
@@ -391,14 +423,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 14:49:12.
+  Last revised on December  2, 2018 at 15:30:05.
   See the <a href="https://ncatlab.org/nlab/history/defunctionalization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/defunctionalization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/defunctionalization/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/defunctionalization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/defunctionalization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/defunctionalization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/defunctionalization/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/defunctionalization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/defunctionalization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/defunctionalization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
