--- a/pages/16403.html
+++ b/pages/16403.html
@@ -2689,7 +2689,7 @@ margin-left: 0em;
   \mathcal{D}
 
 </annotation></semantics></math></div>
-<p>such that there is a <a class="existingWikiWord" href="/nlab/show/natural+bijection">natural bijection</a> between <a class="existingWikiWord" href="/nlab/show/hom-sets">hom-sets</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> on the left and those with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> on the right (eq:HomIsomorphismForAdjointFunctors):</p>
+<p>such that there is a <a class="existingWikiWord" href="/nlab/show/natural+bijection">natural bijection</a> between <a class="existingWikiWord" href="/nlab/show/hom-sets">hom-sets</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> on the left and those with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> on the right <a class="maruku-eqref" href="#eq:HomIsomorphismForAdjointFunctors">(?)</a>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mrow><mi>d</mi><mo>,</mo><mi>c</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msub><mi>Hom</mi> <mi>𝒞</mi></msub><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">(</mo><mi>d</mi><mo stretchy="false">)</mo><mo>,</mo><mi>c</mi><mo stretchy="false">)</mo><munderover><mo>⟶</mo><mo>≃</mo><mrow></mrow></munderover><msub><mi>Hom</mi> <mi>𝒟</mi></msub><mo stretchy="false">(</mo><mi>d</mi><mo>,</mo><mi>R</mi><mo stretchy="false">(</mo><mi>c</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   \phi_{d,c}
    \;\colon\;
@@ -6786,7 +6786,7 @@ margin-left: 0em;
 <div class="num_remark">
 <h6 id="remark_18">Remark</h6>
 
-<p>At this point we don’t go further into the abstract reason why def. <a class="maruku-ref" href="#HomotopyGroupsOftopologicalSpaces"></a> yields group structure above degree 0, which is that <a class="existingWikiWord" href="/nlab/show/positive+dimension+spheres+are+H-cogroup+objects">positive dimension spheres are H-cogroup objects</a>. But this is important, for instance in the proof of the <a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">Brown representability theorem</a>. See the section <em><a href="Introduction+to+Stable+homotopy+theory+--+S#BrownRepresentabilityTheorem">Brown representability theorem</a></em> in <span class="newWikiWord">Part S<a href="/nlab/new/Introduction+to+Stable+homotopy+theory+--+S">?</a></span>.</p>
+<p>At this point we don’t go further into the abstract reason why def. <a class="maruku-ref" href="#HomotopyGroupsOftopologicalSpaces"></a> yields group structure above degree 0, which is that <a class="existingWikiWord" href="/nlab/show/positive+dimension+spheres+are+H-cogroup+objects">positive dimension spheres are H-cogroup objects</a>. But this is important, for instance in the proof of the <a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">Brown representability theorem</a>. See the section <em><a href="Introduction+to+Stable+homotopy+theory+--+S#BrownRepresentabilityTheorem">Brown representability theorem</a></em> in <a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+homotopy+theory+--+S">Part S</a>.</p>
 </div>
 
 <div class="num_defn" id="HomotopyEquivalence">
@@ -8196,7 +8196,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>This statement in particular serves to show that two different axiomatizations of <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">generalized (Eilenberg-Steenrod) cohomology</a> theories are equivalent to each other. See at <em><span class="newWikiWord">Introduction to Stable homotopy theory – S<a href="/nlab/new/Introduction+to+Stable+homotopy+theory+--+S">?</a></span></em> the section <em><a href="Introduction+to+Stable+homotopy+theory+--+S#GeneralizedHomologyAndCohomologyFunctors">generalized cohomology functors</a></em> (<a href="Introduction+to+Stable+homotopy+theory+--+S#HomotopyTheoreticVersionOfCohomologyFunctorDefIsEquivalent">this prop.</a>)</p>
+<p>This statement in particular serves to show that two different axiomatizations of <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">generalized (Eilenberg-Steenrod) cohomology</a> theories are equivalent to each other. See at <em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+homotopy+theory+--+S">Introduction to Stable homotopy theory – S</a></em> the section <em><a href="Introduction+to+Stable+homotopy+theory+--+S#GeneralizedHomologyAndCohomologyFunctors">generalized cohomology functors</a></em> (<a href="Introduction+to+Stable+homotopy+theory+--+S#HomotopyTheoreticVersionOfCohomologyFunctorDefIsEquivalent">this prop.</a>)</p>
 
 <p><strong>Beware</strong> that, by remark <a class="maruku-ref" href="#NotEveryHomotopyEquivalenceIsAWeakHomotopyEquivalence"></a>, what is <strong>not</strong> equivalent to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ho</mi><mo stretchy="false">(</mo><msub><mi>Top</mi> <mi>Quillen</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Ho(Top_{Quillen})</annotation></semantics></math> is the category</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>hTop</mi><mo>≔</mo><mi>Top</mi><msub><mo stretchy="false">/</mo> <mo>∼</mo></msub></mrow><annotation encoding="application/x-tex">
@@ -13437,22 +13437,20 @@ margin-left: 0em;
 
 <p>Now prop. <a class="maruku-ref" href="#UnitOfSingularNerveAndRealizationIsWEOnKanComplexes"></a> says that the <a class="existingWikiWord" href="/nlab/show/derived+adjunction+unit">derived adjunction unit</a> and <a class="existingWikiWord" href="/nlab/show/derived+adjunction+counit">derived adjunction counit</a> are weak equivalences, and hence the Quillen adjunction is a Quillen equivalence.</p>
 </div>
-
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 03:50:42.
+  Last revised on December  2, 2018 at 17:21:39.
   See the <a href="https://ncatlab.org/nlab/history/geometry of physics -- homotopy types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometry+of+physics+--+homotopy+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometry+of+physics+--+homotopy+types/72" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(72 revisions)</span> | <a href="/nlab/show/diff/geometry+of+physics+--+homotopy+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometry+of+physics+--+homotopy+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometry+of+physics+--+homotopy+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometry+of+physics+--+homotopy+types/73" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(73 revisions)</span> | <a href="/nlab/show/diff/geometry+of+physics+--+homotopy+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometry+of+physics+--+homotopy+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometry of physics -- homotopy types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
