--- a/pages/10135.html
+++ b/pages/10135.html
@@ -1579,7 +1579,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>where on the right we used <a class="maruku-eqref" href="#eq:ShapeOfOrbifoldSingularity">(2)</a>.</p>
 
-<p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> is moreover <a class="existingWikiWord" href="/nlab/show/differential+cohesion">differentially cohesive</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>∈</mo><mi>Grp</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V \in Grp(\mathbf{H})</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">group object</a>, then an orbifold <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math> is called a <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>-orbifold</em> if is underlying <a class="existingWikiWord" href="/nlab/show/geometric+stack">geometric groupoid</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mo>♭</mo> <mi>sing</mi></msub><mrow><mo>(</mo><mi>𝒳</mi><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">\flat_{sing}\left( \mathcal{X}\right)</annotation></semantics></math> <a class="maruku-eqref" href="#eq:OrbifoldUnderlyingGroupoid">(5)</a> is a <a class="existingWikiWord" href="/nlab/show/V-manifold">V-manifold</a>.</p>
+<p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> is moreover <a class="existingWikiWord" href="/nlab/show/differential+cohesion">differentially cohesive</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>∈</mo><mi>Grp</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V \in Grp(\mathbf{H})</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">group object</a>, then an orbifold <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math> is called a <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>-orbifold</em> if its underlying <a class="existingWikiWord" href="/nlab/show/geometric+stack">geometric groupoid</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mo>♭</mo> <mi>sing</mi></msub><mrow><mo>(</mo><mi>𝒳</mi><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">\flat_{sing}\left( \mathcal{X}\right)</annotation></semantics></math> <a class="maruku-eqref" href="#eq:OrbifoldUnderlyingGroupoid">(5)</a> is a <a class="existingWikiWord" href="/nlab/show/V-manifold">V-manifold</a>.</p>
 </div>
 
 <div class="num_example" id="GlobalHomotopyQuotientOrbifold">
@@ -1639,7 +1639,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>as in Example <a class="maruku-ref" href="#GlobalHomotopyQuotientOrbifold"></a>, and hence its <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Singularities</mi></mrow><annotation encoding="application/x-tex">Singularities</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/codiscrete+object">codiscrete</a> image is a <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> in the sense of Def. <a class="maruku-ref" href="#Orbifold"></a>:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>(</mo><mrow><mtable><mtr><mtd><msub><mi>coDisc</mi> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>X</mi><mo>⫽</mo><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><mi>𝔹</mi><mi>G</mi></mtd></mtr></mtable></mrow><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><mi>Smooth</mi><mn>∞</mn><msub><mi>Groupoids</mi> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>(</mo><mrow><mtable><mtr><mtd><msub><mi>coDisc</mi> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>X</mi><mo>⫽</mo><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><mi>𝔹</mi><mi>G</mi></mtd></mtr></mtable></mrow><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><mi>Smooth</mi><mn>∞</mn><msub><mi>Groupoids</mi> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   \mathcal{X}
   \;\coloneqq\;
   \left(
@@ -1654,7 +1654,7 @@ margin-left: 0em;
   \;\in\;
   \left( 
     Smooth\infty Groupoids_{sing}
-  \right)_{/\mathbf{B}G}
+  \right)_{/\mathbb{B}G}
   \,.
 
 </annotation></semantics></math></div>
@@ -1999,14 +1999,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 17:48:10.
+  Last revised on December  2, 2018 at 18:24:02.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
