--- a/pages/2626.html
+++ b/pages/2626.html
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="knot_theory">Knot theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/knot">knot</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/link">link</a></strong></p>
 </li>
@@ -405,11 +406,23 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/virtual+knot+theory">virtual knot theory</a></li>
 </ul>
 </li>
-</ul><p><a href="http://ncatlab.org/nlab/edit/knot+theory+-+contents">edit this sidebar</a></p><div class="property">category: <a class="category_link" href="/nlab/all_pages/knot+theory">knot theory</a></div></div>
+</ul>
+
+<p><a href="http://ncatlab.org/nlab/edit/knot+theory+-+contents">edit this sidebar</a></p>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/knot+theory">knot theory</a></div></div></div>
 
 <h4 id="topology">Topology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/topology">topology</a></strong> (<a class="existingWikiWord" href="/nlab/show/point-set+topology">point-set topology</a>, <a class="existingWikiWord" href="/nlab/show/point-free+topology">point-free topology</a>)</p><p>see also <em><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></em> and <em><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a> <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></em></p><p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology">Introduction</a></p><p><strong>Basic concepts</strong></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/topology">topology</a></strong> (<a class="existingWikiWord" href="/nlab/show/point-set+topology">point-set topology</a>, <a class="existingWikiWord" href="/nlab/show/point-free+topology">point-free topology</a>)</p>
+
+<p>see also <em><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></em> and <em><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a> <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></em></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology">Introduction</a></p>
+
+<p><strong>Basic concepts</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/open+subset">open subset</a>, <a class="existingWikiWord" href="/nlab/show/closed+subset">closed subset</a>, <a class="existingWikiWord" href="/nlab/show/neighbourhood">neighbourhood</a></p>
 </li>
@@ -465,7 +478,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/convenient+category+of+topological+spaces">convenient category of topological spaces</a></li>
 </ul>
 </li>
-</ul><p><strong><a href="Top#UniversalConstructions">Universal constructions</a></strong></p><ul>
+</ul>
+
+<p><strong><a href="Top#UniversalConstructions">Universal constructions</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+topology">initial topology</a>, <a class="existingWikiWord" href="/nlab/show/final+topology">final topology</a></p>
 </li>
@@ -497,7 +514,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/colimits+of+normal+spaces">colimits of normal spaces</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/stuff%2C+structure%2C+property">Extra stuff, structure, properties</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/stuff%2C+structure%2C+property">Extra stuff, structure, properties</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/nice+topological+space">nice topological space</a></p>
 </li>
@@ -563,7 +584,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+manifold">topological manifold</a></p>
 </li>
-</ul><p><strong>Examples</strong></p><ul>
+</ul>
+
+<p><strong>Examples</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/empty+space">empty space</a>, <a class="existingWikiWord" href="/nlab/show/point+space">point space</a></p>
 </li>
@@ -651,7 +676,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Warsaw+circle">Warsaw circle</a>, <a class="existingWikiWord" href="/nlab/show/Hawaiian+earring+space">Hawaiian earring space</a></p>
 </li>
-</ul><p><strong>Basic statements</strong></p><ul>
+</ul>
+
+<p><strong>Basic statements</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Hausdorff+spaces+are+sober">Hausdorff spaces are sober</a></p>
 </li>
@@ -737,7 +766,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/CW-complexes+are+paracompact+Hausdorff+spaces">CW-complexes are paracompact Hausdorff spaces</a></p>
 </li>
-</ul><p><strong>Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Urysohn%27s+lemma">Urysohn's lemma</a></p>
 </li>
@@ -769,7 +802,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Jordan+curve+theorem">Jordan curve theorem</a></p>
 </li>
-</ul><p><strong>Analysis Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Analysis Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Heine-Borel+theorem">Heine-Borel theorem</a></p>
 </li>
@@ -781,7 +818,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/extreme+value+theorem">extreme value theorem</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological homotopy theory</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological homotopy theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a>, <a class="existingWikiWord" href="/nlab/show/right+homotopy">right homotopy</a></p>
 </li>
@@ -833,7 +874,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+topological+spaces">classical model structure on topological spaces</a></p>
 </li>
-</ul></div>
+</ul></div></div>
 </div>
 </div>
 
@@ -872,7 +913,7 @@ margin-left: 0em;
 
 <h2 id="example">Example</h2>
 
-<p>The trefoil knot is the simplest non-trivial knot. In its simplest representation, it has three crossings. It is a <a class="existingWikiWord" href="/nlab/show/torus+knot">torus knot</a>, that is it can be embedded on the surface of a solid torus, itself embedded in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math>. Here is a <a class="existingWikiWord" href="/nlab/show/trefoil+knot+-+SVG">picture</a>:</p>
+<p>The trefoil knot is the simplest non-trivial knot. In its simplest representation, it has three crossings. It is a <a class="existingWikiWord" href="/nlab/show/torus+knot">torus knot</a>, that is it can be embedded on the surface of a solid torus, itself embedded in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math>. Here is a <a class="existingWikiWord" href="/nlab/show/trefoil+knot+-+SVG">picture</a>.</p>
 
 <p>Classifying knots up to isotopy is usually done using <a class="existingWikiWord" href="/nlab/show/knot+invariant">knot invariants</a>. Some of these are simple to define (these tend to be geometric and also tend to be hard to calculate) others are harder to define and to show they are invariants but are easier to calculate. A few are reasonably easy to define and to calculate… Yippee!</p>
 
@@ -1013,14 +1054,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 20, 2018 at 11:38:05.
+  Last revised on December  2, 2018 at 18:35:19.
   See the <a href="https://ncatlab.org/nlab/history/knot" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/knot/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
