--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,22 +308,38 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p>aabbcc</p>
-</body></html>
+<body><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mo>∪</mo> <mi>DK</mi></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>×</mo><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>=</mo><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>×</mo><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mo>≃</mo></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>×</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo>⊗</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>γ</mi><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>V</mi> <mo>•</mo></msub><mo>⊗</mo><msub><mi>W</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><mi>f</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow></mover><mi>U</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">(</mo><msub><mi>Z</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mi>DK</mi><mo stretchy="false">(</mo><msub><mi>Z</mi> <mo>•</mo></msub><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \cup_{DK}
+  \;\colon\;
+  DK(V_\bullet)\times DK(W_\bullet)
+  =
+  U(\Gamma(V_\bullet)) \times U(\Gamma(W_\bullet))
+  \stackrel{\simeq}{\to}
+  U(\Gamma(V_\bullet) \times \Gamma(W_\bullet))
+  \stackrel{U(p)}{\to}
+  U(\Gamma(V_\bullet)\otimes \Gamma(W_\bullet))
+  \stackrel{U(\gamma)}{\longrightarrow}
+  U(\Gamma(V_\bullet \otimes W_\bullet))
+  \stackrel{U(\Gamma(f))}{\to}
+  U(\Gamma(Z_\bullet))
+  =
+  DK(Z_\bullet)
+  \,.
+
+</annotation></semantics></math></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 10:59:31.
+  Last revised on December  3, 2018 at 02:11:02.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1726" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1726 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1727" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1727 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
