--- a/pages/10112.html
+++ b/pages/10112.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,15 +892,24 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="fields_and_quanta">Fields and quanta</h4>
 
-<div class="hide"><p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/photon">photon</a> - <a class="existingWikiWord" href="/nlab/show/electromagnetic+field">electromagnetic field</a> (abelian <a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
 </li>
@@ -909,9 +929,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/infraparticle">infraparticle</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/Higgs+boson">Higgs boson</a>, <a class="existingWikiWord" href="/nlab/show/inflaton">inflaton</a> (<a class="existingWikiWord" href="/nlab/show/scalar+field">scalar field</a>)</li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/electron">electron</a></p>
 </li>
@@ -920,7 +948,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
+</li>
 </ul>
 </li>
 
@@ -931,12 +965,22 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/muon">muon</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/pion">pion</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
+</li>
 </ul>
 </li>
 
@@ -953,7 +997,15 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p><p>bosinos:</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
+
+<p>bosinos:</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gravitino">gravitino</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> (<a class="existingWikiWord" href="/nlab/show/Rarita-Schwinger+field">Rarita-Schwinger field</a>)</p>
 </li>
@@ -965,9 +1017,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gluino">gluino</a></p>
 </li>
-</ul><p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p><ul>
+</ul>
+
+<p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/squark">squark</a></li>
-</ul><p><strong>Exotica</strong></p><ul>
+</ul>
+
+<p><strong>Exotica</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/preon">preon</a></p>
 </li>
@@ -983,7 +1043,15 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p><ul>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
+</li>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
 </li>
@@ -995,7 +1063,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/antighost+field">antighost field</a>, <a class="existingWikiWord" href="/nlab/show/Nakanishi-Lautrup+field">Nakanishi-Lautrup field</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -1016,7 +1085,13 @@ margin-left: 0em;
 <h2 id="examples">Examples</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a></p>
+</li>
+
+<li>
+<p><span class="newWikiWord">π-meson<a href="/nlab/new/%CF%80-meson">?</a></span></p>
+</li>
 </ul>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -1038,14 +1113,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 07:58:22.
+  Last revised on December  3, 2018 at 06:56:50.
   See the <a href="https://ncatlab.org/nlab/history/meson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/meson/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/meson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/meson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/meson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/meson/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/meson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/meson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/meson/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
